fixed footer overlap on front matter:

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -57,7 +57,11 @@ article {
 }
 
 .footer {
-  margin: 50px 0;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 60px; /* Set the fixed height of the footer here */
+  line-height: 67px; /* Vertically center the text there */
   color: #d3d3d3;
 }
 
