--- a/themes/oysterTheme/static/css/style.css
+++ b/themes/oysterTheme/static/css/style.css
@@ -1,4 +1,5 @@
-body {
+body, html {
+  height:100%; 
   margin: 0;
   font: 20px/2.2 system-ui;
   padding-top: 20px;
@@ -57,7 +58,11 @@ article {
 }
 
 .footer {
-  margin: 50px 0;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 60px; /* Set the fixed height of the footer here */
+  line-height: 67px; /* Vertically center the text there */
   color: #d3d3d3;
 }
 
